# auth0-explorer

./: .env.example  .gitignore  LICENSE  PUSH_TO_GITHUB.md  README.md  pyproject.toml  requirements.txt
docs/: TOOL_SPECIFICATION.md  USAGE.md
src/: __init__.py  cli.py  config.py  http_client.py  report.py  scanner.py
src/checks/: __init__.py  phase1_recon.py  phase2_discovery.py  phase3_testing.py
wordlists/: connections.txt  emails.txt
