[project]
name = "auth0-pentest-tool"
version = "1.0.0"
description = "Security assessment and reconnaissance tool for Auth0 implementations"
authors = [{name = "Bar Hajby"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pydantic>=2.5.0",
]

[project.scripts]
auth0-pentest = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

